ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: ns-fire
  labels:
    name: fire
  
---

kind: Namespace
apiVersion: v1
metadata:
  name: ns-nginx
  labels:
    name: nginx
