niginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  namespace: ns-nginx
  labels:
    rule: nginxrule
spec:
  containers:
    - name: nginx-container
      image: nginx:stable-trixie
      ports:
        - containerPort: 80
          hostPort: 8080
